adding image and form container

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   </head>
   <body>
     <!-- adding a new section-->
-    <section class=""></section>
+    <section class="bg-gray-100 min-h-screen flex items-center justify-center">
+      <!-- Login Container -->
+      <div class="bg-cyan-100">
+        <!-- Form Container -->
+        <div></div>
+
+        <!-- Image Container -->
+        <div class="w-1/2">
+          <img src="" alt="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
