--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <!-- adding a new section-->
     <section class="bg-gray-100 min-h-screen flex items-center justify-center">
       <!-- Login Container -->
-      <div class="bg-cyan-100">
+      <div class="bg-cyan-100 flex">
         <!-- Form Container -->
-        <div></div>
+        <div class="w-1/2">
+          <h2>test</h2>
+        </div>
 
         <!-- Image Container -->
         <div class="w-1/2">
-          <img src="" alt="" />
+          <img src="logo.webp" alt="" />
         </div>
       </div>
     </section>
