adding new styles for my loggin form

--- a/index.html
+++ b/index.html
@@ -12,28 +12,32 @@
     <!-- adding a new section-->
     <section class="bg-gray-50 min-h-screen flex items-center justify-center">
       <!-- Login Container -->
-      <div class="bg-gray-50 flex rounded-2xl shadow-lg max-w-3xl p-5">
+      <div class="bg-[#455591] flex rounded-3xl shadow-lg max-w-3xl p-5">
         <!-- Form Container -->
         <div class="sm:w-1/2 px-16">
-          <h2 class="font-bold text-2xl">Login</h2>
-          <p class="text-sm mt-4">If you are already a member, please log in</p>
+          <h2 class="text-white text-3xl">Iniciar Sesión</h2>
+          <p class="text-sm mt-4 text-white">
+            Si eres un miembro, porfavor inicie sesión
+          </p>
 
           <!-- This is the form tag-->
           <form action="" class="flex flex-col gap-4">
             <input
-              class="p-2 mt-8 rounded-xl"
+              class="p-2 mt-8 rounded-xl border"
               type="email"
               name="email"
-              placeholder="Email"
+              placeholder="Correo"
             />
             <input
-              class="p-2 mt-8 rounded-xl"
+              class="p-2 mt-2 rounded-xl border"
               type="password"
               name="password"
-              placeholder="Password"
+              placeholder="Contraseña"
             />
 
-            <button>login</button>
+            <button class="bg-[#f97f63] rounded-xl text-white py-2">
+              login
+            </button>
           </form>
         </div>
 
