--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   </head>
   <body>
     <!-- adding a new section-->
-    <section class="bg-gray-50 min-h-screen flex items-center justify-center">
+    <section
+      class="bg-gray-50 min-h-screen flex items-center justify-center w-full"
+    >
       <!-- Login Container -->
-      <div class="bg-[#455591] flex rounded-3xl shadow-lg max-w-3xl p-5">
+      <div class="bg-[#455591] flex rounded-3xl shadow-lg p-5 items-center">
         <!-- Form Container -->
-        <div class="sm:w-1/2 px-16">
+        <div class="md:w-1/2 px-16 mr-2">
           <h2 class="text-white text-3xl">Iniciar Sesión</h2>
           <p class="text-sm mt-4 text-white">
             Si eres un miembro, porfavor inicie sesión
@@ -23,26 +25,101 @@
           <!-- This is the form tag-->
           <form action="" class="flex flex-col gap-4">
             <input
-              class="p-2 mt-8 rounded-xl border"
+              class="p-2 mt-8 rounded-xl border hover:bg-[#faf7f7]"
               type="email"
               name="email"
               placeholder="Correo"
             />
-            <input
-              class="p-2 mt-2 rounded-xl border"
-              type="password"
-              name="password"
-              placeholder="Contraseña"
-            />
+            <div class="relative">
+              <input
+                class="p-2 mt-2 rounded-xl border w-full hover:bg-[#faf7f7]"
+                type="password"
+                name="password"
+                placeholder="Contraseña"
+              />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="19"
+                height="19"
+                fill="gray"
+                class="bi bi-eye absolute top-1/2 right-3 -translate-y-1"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8M1.173 8a13 13 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5s3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5s-3.879-1.168-5.168-2.457A13 13 0 0 1 1.172 8z"
+                />
+                <path
+                  d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0"
+                />
+              </svg>
+            </div>
 
-            <button class="bg-[#f97f63] rounded-xl text-white py-2">
-              login
+            <button
+              class="bg-[#f97f63] rounded-xl text-white py-2 hover:bg-[#e6917e] hover:scale-105 duration-300"
+            >
+              Iniciar
             </button>
           </form>
+
+          <!-- Adding the OR -->
+          <div class="mt-10 grid grid-cols-3 items-center text-gray-50">
+            <hr class="border-gray-400" />
+            <p class="text-center text-sm">Or</p>
+            <hr class="border-gray-400" />
+          </div>
+
+          <!-- Adding google alternative -->
+          <button
+            class="bg-white border py-2 w-full rounded-xl mt-5 flex justify-center items-center text-sm hover:bg-[#fffcfc] hover:scale-105 duration-300"
+          >
+            <svg
+              class="mr-3"
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="25"
+              height="25"
+              viewBox="0 0 48 48"
+            >
+              <path
+                fill="#FFC107"
+                d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"
+              ></path>
+              <path
+                fill="#FF3D00"
+                d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"
+              ></path>
+              <path
+                fill="#4CAF50"
+                d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"
+              ></path>
+              <path
+                fill="#1976D2"
+                d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"
+              ></path></svg
+            >Iniciar Sesión con Google
+          </button>
+
+          <!-- Olvidaste la password ? -->
+          <p
+            class="text-gray-300 mt-5 text-xs border-b py-4 border-gray-400 cursor-pointer hover:text-[#b8b8b8]"
+          >
+            ¿Olvidaste tu Contraseña?
+          </p>
+
+          <!-- Olvido de passowrd-->
+          <div class="text-xs flex justify-between items-center mt-3">
+            <p>¿No tienes una cuenta?</p>
+            <button
+              class="py-2 px-5 bg-[#f97f63] rounded-xl text-white hover:bg-[#e6917e] hover:scale-105 duration-300"
+            >
+              Registrarse
+            </button>
+          </div>
         </div>
 
         <!-- Image Container -->
-        <div class="w-1/2 p-5 rounded-lg sm:block hidden">
+        <div class="md:block w-1/2 hidden">
           <img src="logo.jpeg" alt="" class="rounded-2xl" />
         </div>
       </div>
